
=== version history of Log::Scrubber

version 0.10: 2012-10-12 Jason Terry

    - do not attempt to scrub undefined values, this avoids warnings about undef

    - update the perldoc

version 0.09: 2012-10-11 Jason Terry

    - possible warn about undefined values during import

    - Don't improperly return a sub-item during scrubbing if a nested object is found

    - Allow override methods during import ie "use Log::Scrubber (+custom::method);"

    - Make scrubber work more intuitively with a single value
      It used to always return an array.  Now it will return a scalar if only a single value is passed in.

verson 0.08: 2012-10-08 Jason Terry

    - allow export of scrubber_add_scrubber and scrubber_remove_scrubber

    - remove a bad croak when overriding a method

    - change the system to properly ignore empty scrubber values

version 0.07: 2012-10-05 Jason Terry

    - change how ":Carp" import works

version 0.06: 2012-10-05 Jason Terry

    - make Log::Scrubber work in perl 5.10 (instead of just 5.14)

version 0.05: 2012-10-05 Jason Terry

    - add the ability to scrub hash and array refs

version 0.04: 2012-10-01 Jason Terry

    - add the ability to scrub using a coderef