@@ -1,10 +1,14 @@
+ChangeLog
 Scrubber.pm
 MANIFEST
 Makefile.PL
 README
 t/00-load.t
 t/carp.t
+t/coderef.t
 t/core.t
+t/hash.t
+t/scope.t
 t/scrub.t
 t/syslog.t
 t/warnings.t
